fixed hamburger menu visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -1073,10 +1073,19 @@ input[type="checkbox"]:checked + .privacy-label > .check-privacy {
   background-color: var(--white-background-color);
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms ease-in-out 200ms,
+    visibility 250ms ease-in-out 200ms;
 }
 
 .mobile-container.is-open {
   transform: translateX(0);
+  visibility: visible;
+  opacity: 1;
+  pointer-events: initial;
+  transition-delay: 0ms;
 }
 
 .mobile-contacts-container {
